[gd_scene load_steps=2 format=3 uid="uid://b1wv6rki2etlf"]

[ext_resource type="Script" path="res://item_toast_ui.gd" id="1_n0x71"]

[node name="ItemToastUI" type="Control"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 75.0
script = ExtResource("1_n0x71")
fadeout_start_time_sec = 1.5

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "COUNT"

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
